--- a/database/seeders/1.html
+++ b/database/seeders/1.html
@@ -1,1 +1,317 @@
-<div class="owl-stage" style1="transform: translate3d(-2062px, 0px, 0px); transition: all 0.25s ease 0s; width: 6187px;"><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-10.png" alt="Clients"><span class="as-referenceTitle">Mapa Otomotiv</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-11.png" alt="Clients"><span class="as-referenceTitle">Maret</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-12.png" alt="Clients"><span class="as-referenceTitle">MMK Metalurji</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-13.png" alt="Clients"><span class="as-referenceTitle">Parkcam</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-14.png" alt="Clients"><span class="as-referenceTitle">Plastifay</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-15.png" alt="Clients"><span class="as-referenceTitle">SZ Metal</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-16.png" alt="Clients"><span class="as-referenceTitle">Targid Gıda</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-17.png" alt="Clients"><span class="as-referenceTitle">Turkuaz Polyester</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-18.png" alt="Clients"><span class="as-referenceTitle">Vatan Plastik</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-19.png" alt="Clients"><span class="as-referenceTitle">Namet</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-1.png" alt="Clients"><span class="as-referenceTitle">Anadolu Cam Yenişehir Fabrikası</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-2.png" alt="Clients"><span class="as-referenceTitle">Akdeniz Chemson</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-3.png" alt="Clients"><span class="as-referenceTitle">Alemdar Cargill</span></a></div><div class="owl-item active" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-4.png" alt="Clients"><span class="as-referenceTitle">Atermit</span></a></div><div class="owl-item active" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-5.png" alt="Clients"><span class="as-referenceTitle">Biovento Organik</span></a></div><div class="owl-item active" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-6.png" alt="Clients"><span class="as-referenceTitle">By Petrokimya</span></a></div><div class="owl-item active" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-7.png" alt="Clients"><span class="as-referenceTitle">Colgate Palmolive</span></a></div><div class="owl-item active" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-8.png" alt="Clients"><span class="as-referenceTitle">Fosroc Yapı Kimyasalları</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-9.png" alt="Clients"><span class="as-referenceTitle">Likit Kimya</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-10.png" alt="Clients"><span class="as-referenceTitle">Mapa Otomotiv</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-11.png" alt="Clients"><span class="as-referenceTitle">Maret</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-12.png" alt="Clients"><span class="as-referenceTitle">MMK Metalurji</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-13.png" alt="Clients"><span class="as-referenceTitle">Parkcam</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-14.png" alt="Clients"><span class="as-referenceTitle">Plastifay</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-15.png" alt="Clients"><span class="as-referenceTitle">SZ Metal</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-16.png" alt="Clients"><span class="as-referenceTitle">Targid Gıda</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-17.png" alt="Clients"><span class="as-referenceTitle">Turkuaz Polyester</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-18.png" alt="Clients"><span class="as-referenceTitle">Vatan Plastik</span></a></div><div class="owl-item" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-19.png" alt="Clients"><span class="as-referenceTitle">Namet</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-1.png" alt="Clients"><span class="as-referenceTitle">Anadolu Cam Yenişehir Fabrikası</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-2.png" alt="Clients"><span class="as-referenceTitle">Akdeniz Chemson</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-3.png" alt="Clients"><span class="as-referenceTitle">Alemdar Cargill</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-4.png" alt="Clients"><span class="as-referenceTitle">Atermit</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-5.png" alt="Clients"><span class="as-referenceTitle">Biovento Organik</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-6.png" alt="Clients"><span class="as-referenceTitle">By Petrokimya</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-7.png" alt="Clients"><span class="as-referenceTitle">Colgate Palmolive</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-8.png" alt="Clients"><span class="as-referenceTitle">Fosroc Yapı Kimyasalları</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-9.png" alt="Clients"><span class="as-referenceTitle">Likit Kimya</span></a></div><div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;"><a href="#"><img src="images/clients/logo-10.png" alt="Clients"><span class="as-referenceTitle">Mapa Otomotiv</span></a></div></div>
+<div
+    class="owl-stage"
+    style1="transform: translate3d(-2062px, 0px, 0px); transition: all 0.25s ease 0s; width: 6187px;"
+>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-10.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Mapa Otomotiv</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-11.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Maret</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-12.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >MMK Metalurji</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-13.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Parkcam</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-14.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Plastifay</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-15.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >SZ Metal</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-16.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Targid Gıda</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-17.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Turkuaz Polyester</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-18.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Vatan Plastik</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-19.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Namet</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-1.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Anadolu Cam Yenişehir Fabrikası</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-2.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Akdeniz Chemson</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-3.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Alemdar Cargill</span
+            ></a
+        >
+    </div>
+    <div class="owl-item active" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-4.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Atermit</span
+            ></a
+        >
+    </div>
+    <div class="owl-item active" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-5.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Biovento Organik</span
+            ></a
+        >
+    </div>
+    <div class="owl-item active" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-6.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >By Petrokimya</span
+            ></a
+        >
+    </div>
+    <div class="owl-item active" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-7.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Colgate Palmolive</span
+            ></a
+        >
+    </div>
+    <div class="owl-item active" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-8.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Fosroc Yapı Kimyasalları</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-9.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Likit Kimya</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-10.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Mapa Otomotiv</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-11.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Maret</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-12.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >MMK Metalurji</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-13.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Parkcam</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-14.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Plastifay</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-15.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >SZ Metal</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-16.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Targid Gıda</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-17.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Turkuaz Polyester</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-18.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Vatan Plastik</span
+            ></a
+        >
+    </div>
+    <div class="owl-item" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-19.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Namet</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-1.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Anadolu Cam Yenişehir Fabrikası</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-2.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Akdeniz Chemson</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-3.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Alemdar Cargill</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-4.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Atermit</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-5.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Biovento Organik</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-6.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >By Petrokimya</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-7.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Colgate Palmolive</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-8.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Fosroc Yapı Kimyasalları</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-9.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Likit Kimya</span
+            ></a
+        >
+    </div>
+    <div class="owl-item cloned" style1="width: 128.64px; margin-right: 30px;">
+        <a href="#"
+            ><img src="images/clients/logo-10.png" alt="Clients" /><span
+                class="as-referenceTitle"
+                >Mapa Otomotiv</span
+            ></a
+        >
+    </div>
+</div>
